--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -7,14 +7,14 @@ spec:
   selector:
     matchLabels:
       app: auth
-    template:
-      metadata:
-        labels:
-          app: auth
-      spec:
-        containers:
-          - name: auth
-            image: alminadev/auth
+  template:
+    metadata:
+      labels:
+        app: auth
+    spec:
+      containers:
+        - name: auth
+          image: alminadev/auth
 ---
 apiVersion: v1
 kind: Service
@@ -25,6 +25,6 @@ spec:
     app: auth
   ports:
     - name: auth
-    - protocol: TCP
-    - port: 3000
-    - targetPort: 3000
+      protocol: TCP
+      port: 3000
+      targetPort: 3000
